--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>5.6.3</version>
+        </dependency>
+
 
         <dependency>
             <groupId>nz.net.ultraq.thymeleaf</groupId>
@@ -167,11 +173,11 @@
             <optional>true</optional>
         </dependency>
 
-        <dependency>
-            <groupId>it.ozimov</groupId>
-            <artifactId>embedded-redis</artifactId>
-            <version>0.7.2</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>it.ozimov</groupId>-->
+            <!--<artifactId>embedded-redis</artifactId>-->
+            <!--<version>0.7.2</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
