--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <version>5.6.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>it.ozimov</groupId>
+            <artifactId>embedded-redis</artifactId>
+            <version>0.7.2</version>
+        </dependency>
 
         <dependency>
             <groupId>nz.net.ultraq.thymeleaf</groupId>
