--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,16 @@
             <groupId>org.webjars.bower</groupId>
             <artifactId>select2-bootstrap-theme</artifactId>
             <version>0.1.0-beta.10</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>bootstrap</artifactId>
+                    <groupId>org.webjars.bower</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>select2</artifactId>
+                    <groupId>org.webjars.bower</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
